--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
         <!-- pop up score  -->
 
-        <div id="popup" class="fixed inset-0 bg-black/50 flex items-center justify-center hidden ">
+        <div id="popup" class="fixed inset-0 bg-black/50 flex items-center justify-center  ">
             <div class="bg-slate-800 rounded-lg p-6 w-80 md:w-full max-w-md text-center">
-            <h2 class="text-2xl font-bold mb-2">Votre Score</h2>
-            <p class="mb-4">Vous avez obtenu <span id="finalScore" class="font-semibold text-green-400">0</span> points</p>
+            <h2 class="text-2xl md:text-4xl font-bold mb-2 ">Votre Score</h2>
+            <p class="mb-10  md:text-xl md:mt-5">Vous avez obtenu <span id="finalScore" class="font-semibold text-green-400">0</span> points</p>
             <button id="closePopup" class="px-4 py-2 bg-green-500 rounded text-white">Fermer</button>
           </div>
        </div>
