--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <!-- pop up score  -->
 
-        <div id="popup" class="fixed inset-0 bg-black/50 flex items-center justify-center  ">
+        <div id="popup" class="fixed inset-0 bg-black/50 flex items-center justify-center hidden ">
             <div class="bg-slate-800 rounded-lg p-6 w-80 md:w-full max-w-md text-center">
             <h2 class="text-2xl md:text-4xl font-bold mb-2 ">Votre Score</h2>
             <p class="mb-10  md:text-xl md:mt-5">Vous avez obtenu <span id="finalScore" class="font-semibold text-green-400">0</span> points</p>
